--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-body {
+ body
+ p {
     
     background-color: rgba(135, 143, 253, 0.897);
     }
-    li { 
+    p { 
         background-color: rgb(95, 140, 224);
     }
