--- a/style.css
+++ b/style.css
@@ -1,8 +1,38 @@
- body
- p {
-    
-    background-color: rgba(135, 143, 253, 0.897);
-    }
+ body {
+ background-color:darkgrey }
     p { 
-        background-color: rgb(95, 140, 224);
+        color:blue;
+        font-family: fantasy;
     }
+h1 {
+    color: blueviolet;
+    font-family: cursive;
+}
+.foods
+{ 
+    color: crimson;
+    font-family: monospace;
+}
+#Pizza {
+    color: maroon;
+}
+#Ice-Cream
+{
+    color: aliceblue;
+}
+#Sushi
+{
+    color: black;
+}
+div 
+{
+background-color: darkgoldenrod;
+height: 350px;
+width: 500px;
+border:5px solid #000;
+margin:10px;
+}
+image
+{
+    border:5px solid #000;
+}
